# gptrs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
example/: example.go  example.sql  fibo_err.py  function.js  react.js
src/: chat.rs  cli.rs  completion.rs  err.rs  http_client.rs  lib.rs  main.rs  models.rs  output.rs  repl.rs
src/completion/: mod.rs
