[package]
name = "gptrs"
description = "A cli built on top of OpenAI that can generate code and output to a file"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
keywords = ["openai", "cli", "chatgpt", "code", "generation"]
license = "Apache-2.0/MIT"
repository = "https://github.com/lyledean1/openai-gptrs"

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.67"
text-colorizer = "1.0.0"
tokio = {version = "1.26.0", features = ["full"]}
