[package]
name = "gptshell"
description = "GPTshell is a tool for developers to query and interact with ChatGPT's language capabilities. GPTshell's aim is to simplify the process of using natural language processing while developing."
version = "0.1.9"
edition = "2021"
readme = "./README.md"
keywords = ["openai", "chatgpt", "shell", "cli", "devex"]
license = "Apache-2.0/MIT"
repository = "https://github.com/lyledean1/gptshell"

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
mockito = "1.0.0"
regex = "1.7.1"
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
rustyline = "11.0.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.67"
spinoff = "0.7.0"
text-colorizer = "1.0.0"
tokio = {version = "1.26.0", features = ["full"]}
